# wind-rose-cpp

./: CMakeLists.txt  wind_rose
data/: wind_data.txt
include/: constants.h  processing.h  wind_rose.h
src/: main.cpp  processing.cpp  sorting.cpp
tests/: test_processing.cpp
